Add 'Operators on minikube' doc and update other docs

--- a/file-reference/index.html
+++ b/file-reference/index.html
@@ -430,10 +430,10 @@
 <pre class="highlight yaml tab-yaml"><code><span class="na">starterProjects</span><span class="pi">:</span>
   <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">quarkus-quickstart</span>
     <span class="na">description</span><span class="pi">:</span> <span class="s">minimal CRUD app with quarkus</span>
+    <span class="na">subDir</span><span class="pi">:</span> <span class="s">/getting-started/</span> <span class="c1"># optional checkout dir</span>
     <span class="na">git</span><span class="pi">:</span>
       <span class="na">location</span><span class="pi">:</span> <span class="s">https://github.com/quarkusio/quarkus-quickstarts</span>
       <span class="na">branch</span><span class="pi">:</span> <span class="s">master</span>
-      <span class="na">sparseCheckoutDir</span><span class="pi">:</span> <span class="s">/getting-started/</span> <span class="c1"># optional checkout dir</span>
       <span class="na">startPoint</span><span class="pi">:</span> <span class="s">1.7.0.Final</span> <span class="c1"># tag or commit to start at</span>
 </code></pre>
 <table><thead>
@@ -630,10 +630,10 @@
 <pre class="highlight yaml tab-yaml"><code><span class="na">starterProjects</span><span class="pi">:</span>
   <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">quarkus-quickstart</span>
     <span class="na">description</span><span class="pi">:</span> <span class="s">minimal CRUD app with quarkus</span>
+    <span class="na">subDir</span><span class="pi">:</span> <span class="s">/getting-started/</span> <span class="c1"># optional checkout dir</span>
     <span class="na">git</span><span class="pi">:</span>
       <span class="na">location</span><span class="pi">:</span> <span class="s">https://github.com/quarkusio/quarkus-quickstarts</span>
       <span class="na">branch</span><span class="pi">:</span> <span class="s">master</span>
-      <span class="na">sparseCheckoutDir</span><span class="pi">:</span> <span class="s">/getting-started/</span> <span class="c1"># optional checkout dir</span>
       <span class="na">startPoint</span><span class="pi">:</span> <span class="s">1.7.0.Final</span> <span class="c1"># tag or commit to start at</span>
 </code></pre>
 <blockquote>
@@ -642,10 +642,10 @@
 <pre class="highlight yaml tab-yaml"><code><span class="na">starterProjects</span><span class="pi">:</span>
   <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">nodejs-web-app</span>
     <span class="na">description</span><span class="pi">:</span> <span class="s">nodejs app</span>
+    <span class="na">subDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
     <span class="na">github</span><span class="pi">:</span>
       <span class="na">location</span><span class="pi">:</span> <span class="s">https://github.com/odo-devfiles/nodejs-ex.git</span>
       <span class="na">branch</span><span class="pi">:</span> <span class="s">master</span>
-      <span class="na">sparseCheckoutDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
       <span class="na">startPoint</span><span class="pi">:</span> <span class="s">1.0.0</span> <span class="c1"># tag or commit to start at</span>
 </code></pre>
 <blockquote>
@@ -654,9 +654,9 @@
 <pre class="highlight yaml tab-yaml"><code><span class="na">starterProjects</span><span class="pi">:</span>
   <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">nodejs-web-app</span>
     <span class="na">description</span><span class="pi">:</span> <span class="s">nodejs web app</span>
+    <span class="na">subDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
     <span class="na">zip</span><span class="pi">:</span>
       <span class="na">location</span><span class="pi">:</span> <span class="s">https://github.com/odo-devfiles/nodejs-ex/archive/0.0.1.zip</span>
-      <span class="na">sparseCheckoutDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
 </code></pre>
 <p>Each starter project may contain three different objects, <code>git</code>, <code>github</code> or <code>zip</code>.</p>
 
@@ -704,10 +704,10 @@
 </blockquote>
 <pre class="highlight yaml tab-yaml"><code><span class="na">starterProjects</span><span class="pi">:</span>
   <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">nodejs-web-app</span>
+    <span class="na">subDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
     <span class="na">git</span><span class="pi">:</span>
       <span class="na">location</span><span class="pi">:</span> <span class="s">https://github.com/odo-devfiles/nodejs-ex.git</span>
       <span class="na">branch</span><span class="pi">:</span> <span class="s">master</span>
-      <span class="na">sparseCheckoutDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
       <span class="na">startPoint</span><span class="pi">:</span> <span class="s">1.0.0</span> <span class="c1"># tag or commit to start at</span>
 </code></pre>
 <table><thead>
@@ -744,10 +744,10 @@
 </blockquote>
 <pre class="highlight yaml tab-yaml"><code><span class="na">starterProjects</span><span class="pi">:</span>
   <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">nodejs-web-app</span>
+    <span class="na">subDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
     <span class="na">github</span><span class="pi">:</span>
       <span class="na">location</span><span class="pi">:</span> <span class="s">https://github.com/odo-devfiles/nodejs-ex.git</span>
       <span class="na">branch</span><span class="pi">:</span> <span class="s">master</span>
-      <span class="na">sparseCheckoutDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
       <span class="na">startPoint</span><span class="pi">:</span> <span class="s">1.0.0</span> <span class="c1"># tag or commit to start at</span>
 </code></pre>
 <table><thead>
@@ -784,9 +784,9 @@
 </blockquote>
 <pre class="highlight yaml tab-yaml"><code><span class="na">starterProjects</span><span class="pi">:</span>
   <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">nodejs-web-app</span>
+    <span class="na">subDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
     <span class="na">zip</span><span class="pi">:</span>
       <span class="na">location</span><span class="pi">:</span> <span class="s">https://github.com/odo-devfiles/nodejs-ex/archive/0.0.1.zip</span>
-      <span class="na">sparseCheckoutDir</span><span class="pi">:</span> <span class="s">/app/</span> <span class="c1"># optional checkout dir</span>
 </code></pre>
 <table><thead>
 <tr>
